src/main/java/com/example/demo/Dto/Error/Response/InvalidCarResponse.java
package com.example.demo.Dto.Error.Response;


import lombok.Getter;
import lombok.Setter;

@Setter
@Getter
public class InvalidCarResponse {
    private String code;
    private String message;
}
